--- a/build.gradle
+++ b/build.gradle
@@ -42,13 +42,13 @@ group = 'de.thomasrosenau'
 sourceCompatibility = 1.8
 
 // version of this plugin
-version = '2.1.3-SNAPSHOT'
+version = '2.1.3'
 
 // IDE version that will be used for compilation and for :runIde task
-intellij.version = '193-EAP-SNAPSHOT'
+intellij.version = '193.3793.14-EAP-SNAPSHOT'
 
 patchPluginXml {
-    sinceBuild = '193'
+    sinceBuild = '193.2956.37'
     untilBuild = '193.*'
 
     // language=HTML prefix=<body> suffix=</body>
