--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ group = 'de.thomasrosenau'
 sourceCompatibility = 1.8
 
 // version of this plugin
-version = '2.1.6-SNAPSHOT'
+version = '2.1.6'
 
 // IDE version that will be used for compilation, unit tests, and for :runIde task
 intellij.version = '203.5981.155'
