--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 /*
- Copyright 2020 Thomas Rosenau
+ Copyright 2021 Thomas Rosenau
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
@@ -20,13 +20,12 @@ import org.jetbrains.grammarkit.tasks.GenerateParser
 plugins {
     id 'idea'
     id 'java'
-    id 'org.jetbrains.intellij' version '0.4.21'
-    id 'org.jetbrains.grammarkit' version '2020.2.1'
-    id 'com.github.ManifestClasspath' version '0.1.0-RELEASE' // required in Windows
+    id 'org.jetbrains.intellij' version '0.7.2'
+    id 'org.jetbrains.grammarkit' version '2021.1.2'
 }
 
 wrapper {
-    gradleVersion = '6.7.1'
+    gradleVersion = '6.8.3'
 }
 
 
@@ -35,14 +34,14 @@ group = 'de.thomasrosenau'
 sourceCompatibility = 1.8
 
 // version of this plugin
-version = '2.1.6-SNAPSHOT'
+version = '2.1.7-SNAPSHOT'
 
 // IDE version that will be used for compilation, unit tests, and for :runIde task
-intellij.version = '203.5981.155'
+intellij.version = '211.6693.111'
 
 patchPluginXml {
-    sinceBuild = '201'
-    untilBuild = '203.*'
+    sinceBuild = '211'
+    untilBuild = '211.*'
 
     // language=HTML prefix=<body> suffix=</body>
     pluginDescription = '''
@@ -51,11 +50,11 @@ patchPluginXml {
         <p>Does not support the formats: side-by-side, diff3, ed, if-else, RCS.</p>
         <br/>
         <hr/>
-        <p>Copyright 2020 Thomas Rosenau</p>
+        <p>Copyright 2021 Thomas Rosenau</p>
         <p>Licensed under the Apache License, Version 2.0 (the "License"); you may not use this software except in
            compliance with the License. You may obtain a copy of the License at</p>
         <br/>
-        <p><a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a></p>
+        <p><a href="https://www.apache.org/licenses/LICENSE-2.0">https://www.apache.org/licenses/LICENSE-2.0</a></p>
         <br/>
         <p>Unless required by applicable law or agreed to in writing, software distributed under the License is distributed
            on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for
@@ -66,6 +65,10 @@ patchPluginXml {
 
     // language=HTML prefix=<body> suffix=</body>
     changeNotes = '''
+        <h5>2.1.7</h5>
+        <ul>
+          <li>Update compatibility for 2021.1 product line</li>
+        </ul>
         <h5>2.1.6</h5>
         <ul>
           <li>Switch to Java 11</li>
@@ -143,7 +146,7 @@ clean {
 }
 
 def intellijPublishToken = project.properties['intellijPublishToken'] ?:
-        'see http://www.jetbrains.org/intellij/sdk/docs/tutorials/build_system/deployment.html'
+        'see https://plugins.jetbrains.com/docs/intellij/deployment.html'
 publishPlugin {
     token = intellijPublishToken
     channels = 'beta'
