--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,39 @@
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+!gradle/wrapper/gradle-wrapper.jar
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+.idea/
+
+*.iml
+target/
+release\.properties
+
+# I store some stuff about the software here :)
+run/
+
+# Other stuff
 .gradle/
 build/
 out/
 src/main/generated-java/
-.idea/**
-!.idea/compiler.xml
-!.idea/encodings.xml
-!.idea/externalDependencies.xml
-!.idea/gradle.xml
-!.idea/icon.png
-!.idea/icon_dark.png
-!.idea/misc.xml
-!.idea/startup.xml
-!.idea/vcs.xml
-!.idea/codeStyles
-!.idea/codeStyles/**
-!.idea/copyright
-!.idea/copyright/**
-!.idea/dictionaries
-!.idea/dictionaries/**
-!.idea/runConfigurations
-!.idea/runConfigurations/**
-
-.idea/
