Update more names and links

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,16 @@ wrapper {
     gradleVersion = '7.4'
 }
 
+Properties releaseProperties = new Properties()
+def releasePropertiesFile = file('release.properties')
+if (releasePropertiesFile.exists()) {
+    releasePropertiesFile.withReader('UTF-8') {
+        releaseProperties.load(it)
+        project.ext.releaseProps = releaseProperties
+    }
+} else {
+    project.ext.releaseProps = releaseProperties
+}
 
 group = 'de.thomasrosenau'
 
@@ -145,7 +155,7 @@ clean {
     delete genSrcPath
 }
 
-def intellijPublishToken = project.properties['intellijPublishToken'] ?:
+def intellijPublishToken = project.ext.releaseProps['intellijPublishToken'] ?:
         'see https://plugins.jetbrains.com/docs/intellij/deployment.html'
 publishPlugin {
     token = intellijPublishToken
