--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,12 @@ import org.jetbrains.grammarkit.tasks.GenerateParserTask
 plugins {
     id 'idea'
     id 'java'
-    id 'org.jetbrains.intellij' version '1.6.0'
+    id 'org.jetbrains.intellij' version '1.9.0'
     id 'org.jetbrains.grammarkit' version '2021.2.2'
 }
 
 wrapper {
-    gradleVersion = '7.4.2'
+    gradleVersion = '7.5.1'
 }
 
 Properties releaseProperties = new Properties()
@@ -41,17 +41,17 @@ if (releasePropertiesFile.exists()) {
 
 group = 'de.thomasrosenau'
 
-sourceCompatibility = 11
+sourceCompatibility = 17
 
 // version of this plugin
-version = '2.1.8-SNAPSHOT'
+version = '2.1.9-SNAPSHOT'
 
 // IDE version that will be used for compilation, unit tests, and for :runIde task
-intellij.version = '222.2270-EAP-CANDIDATE-SNAPSHOT'
+intellij.version = '223.5756-EAP-CANDIDATE-SNAPSHOT'
 
 patchPluginXml {
-    sinceBuild = '222'
-    untilBuild = '222.*'
+    sinceBuild = '223'
+    untilBuild = '223.*'
 
     // language=HTML prefix=<body> suffix=</body>
     pluginDescription = '''
@@ -75,6 +75,10 @@ patchPluginXml {
 
     // language=HTML prefix=<body> suffix=</body>
     changeNotes = '''
+        <h5>2.1.9</h5>
+        <ul>
+          <li>Update compatibility for 2022.3+ product lines</li>
+        </ul>
         <h5>2.1.8</h5>
         <ul>
           <li>Update compatibility for 2022.2+ product lines</li>
